Structure for Equipment and Weapon. Base class for melee and range.

--- a/Dravenklova/Config/DefaultInput.ini
+++ b/Dravenklova/Config/DefaultInput.ini
@@ -43,8 +43,8 @@ bDefaultViewportMouseLock=True
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Crouch",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="DropLantern",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="DropWeapon",Key=G,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DropSecondary",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DropPrimary",Key=G,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
