--- a/Dravenklova/Config/DefaultInput.ini
+++ b/Dravenklova/Config/DefaultInput.ini
@@ -37,7 +37,7 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=True
 +ActionMappings=(ActionName="Use",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="CheckStats",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="CheckStats",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Weapon Primary",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Weapon Secondary",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -46,12 +46,15 @@ bDefaultViewportMouseLock=True
 +ActionMappings=(ActionName="DropSecondary",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="DropPrimary",Key=G,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Lean",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
-+AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="LeanRight",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="LeanUp",Key=MouseY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
