More animations, textures, crossbow blueprint, meshes.

--- a/Dravenklova/Config/DefaultEngine.ini
+++ b/Dravenklova/Config/DefaultEngine.ini
@@ -27,3 +27,7 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
+
+[/Script/Engine.Engine]
+NearClipPlane=0.100000
+
