Implemented the Ghoul AI which can walk around the level using the navmesh and patrol using BP_Waypoints, if CanSeePawn he will follow the player, also added so the AI can open doors

--- a/Dravenklova/Config/DefaultEngine.ini
+++ b/Dravenklova/Config/DefaultEngine.ini
@@ -31,3 +31,6 @@ r.AllowStaticLighting=False
 [/Script/Engine.Engine]
 NearClipPlane=0.100000
 
+[/Script/Engine.RecastNavMesh]
+CellSize=10.000000
+
